# rudoku

./: .gitignore  Cargo.toml  README.md
data/test/: test_invalid_1.txt  test_invalid_2.txt  test_invalid_5.txt  test_valid_2.txt
src/: board.rs  game.rs  generator.rs  lib.rs  main.rs  solver.rs  tui.rs
test_samples/: test_invalid_3.txt  test_invalid_4.txt  test_valid_1.txt
