[package]
name = "rudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
ratatui = "0.25.0"
